[models][detection][ssd] update notebooks

--- a/notebooks/mobilenet_v1_ssd_train.ipynb
+++ b/notebooks/mobilenet_v1_ssd_train.ipynb
@@ -58,7 +58,7 @@
     "import fiftyone.zoo as foz\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from what.models.detection.ssd.datasets.fiftyone import FiftyOneDataset"
+    "from what.models.detection.datasets.fiftyone import FiftyOneDataset"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "from what.models.detection.ssd.ssd.preprocessing import TrainAugmentation, TestTransform\n",
-    "from what.models.detection.ssd.ssd.config import mobilenetv1_ssd_config\n",
+    "from what.models.detection.ssd.ssd import mobilenetv1_ssd_config\n",
     "from what.models.detection.ssd.ssd.ssd import MatchPrior"
    ]
   },
@@ -97,60 +97,44 @@
      "output_type": "stream",
      "text": [
       "Split 'train' already downloaded\n",
-      "Loading 'voc-2012' split 'train'\n",
-      " 100% |███████████████| 5717/5717 [12.2s elapsed, 0s remaining, 373.4 samples/s]      \n",
-      "Dataset 'voc-2012-train' created\n"
+      "Ignoring unsupported parameter 'label_types' for importer type <class 'fiftyone.utils.data.importers.FiftyOneImageDetectionDatasetImporter'>\n",
+      "Loading existing dataset 'voc-2012-train'. To reload from disk, either delete the existing dataset or provide a custom `dataset_name` to use\n"
      ]
     }
    ],
    "source": [
     "# Load the data from fiftyone\n",
-    "voc_2012_train = foz.load_zoo_dataset(\"voc-2012\", split=\"train\")"
+    "voc_2012_train = foz.load_zoo_dataset(\"voc-2012\", split=\"train\", label_types=[\"detections\"],)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"800\"\n",
-       "            src=\"http://localhost:5151/?notebook=true&handleId=0503a987-983f-46e2-aae4-d53ca930e84d\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x20777396848>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Visualize the dataset\n",
     "session = fo.launch_app(voc_2012_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-14 16:08:22,270 __main__: Train dataset size: 5717\n"
+      "[INFO] 2022-01-20 15:15:28,574 __main__: Train dataset size: 5717\n"
      ]
     }
    ],
@@ -181,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -189,16 +173,14 @@
      "output_type": "stream",
      "text": [
       "Split 'train' already downloaded\n",
-      "Loading 'voc-2007' split 'train'\n",
-      " 100% |███████████████| 2501/2501 [6.6s elapsed, 0s remaining, 348.8 samples/s]       \n",
-      "Dataset 'voc-2007-train' created\n"
+      "Loading existing dataset 'voc-2007-train'. To reload from disk, either delete the existing dataset or provide a custom `dataset_name` to use\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-14 16:08:29,287 __main__: validation dataset size: 2501\n"
+      "[INFO] 2022-01-20 15:15:30,608 __main__: validation dataset size: 2501\n"
      ]
     }
    ],
@@ -229,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -247,27 +229,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-14 16:08:29,387 what.models.detection.ssd.mobilenet_v1_ssd: Init from pretrained ssd models/mobilenet-v1-ssd-mp-0_675.pth\n",
-      "[INFO] 2022-01-14 16:08:29,463 what.models.detection.ssd.mobilenet_v1_ssd: Start training using CosineAnnealingLR scheduler.\n",
-      "[INFO] 2022-01-14 16:10:14,549 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 10, Average Loss: 19.7178, Average Regression Loss 3.9547, Average Classification Loss: 15.7630\n",
-      "[INFO] 2022-01-14 16:11:50,808 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 20, Average Loss: 14.1856, Average Regression Loss 3.1112, Average Classification Loss: 11.0743\n",
-      "[INFO] 2022-01-14 16:13:27,665 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 30, Average Loss: 11.7552, Average Regression Loss 2.9490, Average Classification Loss: 8.8062\n",
-      "[INFO] 2022-01-14 16:15:05,689 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 40, Average Loss: 9.8950, Average Regression Loss 2.8774, Average Classification Loss: 7.0176\n",
-      "[INFO] 2022-01-14 16:16:47,181 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 50, Average Loss: 8.7432, Average Regression Loss 2.6644, Average Classification Loss: 6.0787\n",
-      "[INFO] 2022-01-14 16:18:16,165 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 60, Average Loss: 8.0869, Average Regression Loss 2.6960, Average Classification Loss: 5.3909\n",
-      "[INFO] 2022-01-14 16:19:51,269 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 70, Average Loss: 7.6715, Average Regression Loss 2.5609, Average Classification Loss: 5.1106\n",
-      "[INFO] 2022-01-14 16:21:25,915 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 80, Average Loss: 7.2722, Average Regression Loss 2.3570, Average Classification Loss: 4.9152\n",
-      "[INFO] 2022-01-14 16:23:01,117 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 90, Average Loss: 7.0848, Average Regression Loss 2.3143, Average Classification Loss: 4.7705\n",
-      "[INFO] 2022-01-14 16:24:34,791 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 100, Average Loss: 6.8580, Average Regression Loss 2.2425, Average Classification Loss: 4.6155\n",
-      "[INFO] 2022-01-14 16:26:07,986 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 110, Average Loss: 6.5071, Average Regression Loss 1.9527, Average Classification Loss: 4.5544\n",
-      "[INFO] 2022-01-14 16:27:45,671 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 120, Average Loss: 6.4948, Average Regression Loss 1.9691, Average Classification Loss: 4.5258\n",
-      "[INFO] 2022-01-14 16:29:23,788 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 130, Average Loss: 6.7189, Average Regression Loss 2.0766, Average Classification Loss: 4.6423\n",
-      "[INFO] 2022-01-14 16:31:02,956 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 140, Average Loss: 6.2868, Average Regression Loss 1.8698, Average Classification Loss: 4.4170\n",
-      "[INFO] 2022-01-14 16:32:36,921 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 150, Average Loss: 6.2622, Average Regression Loss 1.8426, Average Classification Loss: 4.4196\n",
-      "[INFO] 2022-01-14 16:34:12,785 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 160, Average Loss: 6.2402, Average Regression Loss 1.8403, Average Classification Loss: 4.4000\n",
-      "[INFO] 2022-01-14 16:35:50,554 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 170, Average Loss: 6.0396, Average Regression Loss 1.6929, Average Classification Loss: 4.3467\n",
-      "[INFO] 2022-01-14 16:41:17,385 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Validation Loss: 5.8143, Validation Regression Loss 1.6887, Validation Classification Loss: 4.1257\n",
-      "[INFO] 2022-01-14 16:41:17,445 what.models.detection.ssd.mobilenet_v1_ssd: Saved model models/mobilenet-v1-ssd-Epoch-0-Loss-5.814328284203252.pth\n"
+      "[INFO] 2022-01-20 15:15:32,661 what.models.detection.ssd.mobilenet_v1_ssd: Init from pretrained ssd models/mobilenet-v1-ssd-mp-0_675.pth\n",
+      "[INFO] 2022-01-20 15:15:34,147 what.models.detection.ssd.mobilenet_v1_ssd: Start training using CosineAnnealingLR scheduler.\n",
+      "/home/wuhanstudio/whitebox-adversarial-toolbox/what/models/detection/ssd/transforms/transforms.py:243: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  mode = random.choice(self.sample_options)\n",
+      "[INFO] 2022-01-20 15:15:41,215 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 10, Average Loss: 19.7620, Average Regression Loss 3.9450, Average Classification Loss: 15.8170\n",
+      "[INFO] 2022-01-20 15:15:46,461 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 20, Average Loss: 14.0563, Average Regression Loss 2.9937, Average Classification Loss: 11.0626\n",
+      "[INFO] 2022-01-20 15:15:51,890 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 30, Average Loss: 11.6577, Average Regression Loss 2.9390, Average Classification Loss: 8.7187\n",
+      "[INFO] 2022-01-20 15:15:57,324 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 40, Average Loss: 9.7512, Average Regression Loss 2.7660, Average Classification Loss: 6.9852\n",
+      "[INFO] 2022-01-20 15:16:02,809 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 50, Average Loss: 8.6162, Average Regression Loss 2.6561, Average Classification Loss: 5.9601\n",
+      "[INFO] 2022-01-20 15:16:08,262 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 60, Average Loss: 7.9420, Average Regression Loss 2.4775, Average Classification Loss: 5.4645\n",
+      "[INFO] 2022-01-20 15:16:13,942 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 70, Average Loss: 7.8411, Average Regression Loss 2.6946, Average Classification Loss: 5.1465\n",
+      "[INFO] 2022-01-20 15:16:19,312 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 80, Average Loss: 7.2090, Average Regression Loss 2.2292, Average Classification Loss: 4.9799\n",
+      "[INFO] 2022-01-20 15:16:24,890 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 90, Average Loss: 7.0581, Average Regression Loss 2.2933, Average Classification Loss: 4.7648\n",
+      "[INFO] 2022-01-20 15:16:30,210 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 100, Average Loss: 6.8130, Average Regression Loss 2.1301, Average Classification Loss: 4.6828\n",
+      "[INFO] 2022-01-20 15:16:35,586 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 110, Average Loss: 6.5294, Average Regression Loss 2.0344, Average Classification Loss: 4.4950\n",
+      "[INFO] 2022-01-20 15:16:41,162 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 120, Average Loss: 6.5411, Average Regression Loss 1.9626, Average Classification Loss: 4.5785\n",
+      "[INFO] 2022-01-20 15:16:46,779 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 130, Average Loss: 6.2685, Average Regression Loss 1.8621, Average Classification Loss: 4.4064\n",
+      "[INFO] 2022-01-20 15:16:52,010 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 140, Average Loss: 6.3041, Average Regression Loss 1.9504, Average Classification Loss: 4.3536\n",
+      "[INFO] 2022-01-20 15:16:57,610 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 150, Average Loss: 6.1556, Average Regression Loss 1.7948, Average Classification Loss: 4.3608\n",
+      "[INFO] 2022-01-20 15:17:03,056 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 160, Average Loss: 6.2693, Average Regression Loss 1.9008, Average Classification Loss: 4.3685\n",
+      "[INFO] 2022-01-20 15:17:08,486 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 170, Average Loss: 6.2064, Average Regression Loss 1.8248, Average Classification Loss: 4.3815\n",
+      "[INFO] 2022-01-20 15:17:32,680 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Validation Loss: 5.7942, Validation Regression Loss 1.6806, Validation Classification Loss: 4.1136\n",
+      "[INFO] 2022-01-20 15:17:32,732 what.models.detection.ssd.mobilenet_v1_ssd: Saved model models/mobilenet-v1-ssd-Epoch-0-Loss-5.794220924377441.pth\n"
      ]
     }
    ],
@@ -303,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
