--- a/notebooks/mobilenet_v2_ssd_lite_train.ipynb
+++ b/notebooks/mobilenet_v2_ssd_lite_train.ipynb
@@ -58,7 +58,7 @@
     "import fiftyone.zoo as foz\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from what.models.detection.ssd.datasets.fiftyone import FiftyOneDataset"
+    "from what.models.detection.datasets.fiftyone import FiftyOneDataset"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "from what.models.detection.ssd.ssd.preprocessing import TrainAugmentation, TestTransform\n",
-    "from what.models.detection.ssd.ssd.config import mobilenetv1_ssd_config\n",
+    "from what.models.detection.ssd.ssd import mobilenetv1_ssd_config\n",
     "from what.models.detection.ssd.ssd.ssd import MatchPrior"
    ]
   },
@@ -97,7 +97,9 @@
      "output_type": "stream",
      "text": [
       "Split 'train' already downloaded\n",
-      "Loading existing dataset 'voc-2012-train'. To reload from disk, either delete the existing dataset or provide a custom `dataset_name` to use\n"
+      "Loading 'voc-2012' split 'train'\n",
+      " 100% |███████████████| 5717/5717 [8.9s elapsed, 0s remaining, 558.8 samples/s]      \n",
+      "Dataset 'voc-2012-train' created\n"
      ]
     }
    ],
@@ -107,54 +109,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connected to FiftyOne on port 5151 at 127.0.0.1.\n",
-      "If you are not connecting to a remote session, you may need to start a new session and specify a port\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"800\"\n",
-       "            src=\"http://localhost:5151/?notebook=true&handleId=d88ccf26-1d8c-4d74-bc59-e8182daf11aa\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x27cc14e21c8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "# Visualize the dataset\n",
+    "### Visualize the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "session = fo.launch_app(voc_2012_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-14 16:43:25,413 __main__: Train dataset size: 5717\n"
+      "[INFO] 2022-01-20 15:19:10,313 __main__: Train dataset size: 5717\n"
      ]
     }
    ],
@@ -185,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,14 +174,16 @@
      "output_type": "stream",
      "text": [
       "Split 'train' already downloaded\n",
-      "Loading existing dataset 'voc-2007-train'. To reload from disk, either delete the existing dataset or provide a custom `dataset_name` to use\n"
+      "Loading 'voc-2007' split 'train'\n",
+      " 100% |███████████████| 2501/2501 [4.0s elapsed, 0s remaining, 601.4 samples/s]      \n",
+      "Dataset 'voc-2007-train' created\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-14 16:43:25,514 __main__: validation dataset size: 2501\n"
+      "[INFO] 2022-01-20 15:19:19,868 __main__: validation dataset size: 2501\n"
      ]
     }
    ],
@@ -231,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -249,27 +232,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-14 16:43:25,687 what.models.detection.ssd.mobilenet_v2_ssd_lite: Init from pretrained ssd models/mobilenet-v2-ssd-lite-mp-0_686.pth\n",
-      "[INFO] 2022-01-14 16:43:25,778 what.models.detection.ssd.mobilenet_v2_ssd_lite: Start training using CosineAnnealingLR scheduler.\n",
-      "[INFO] 2022-01-14 16:45:32,873 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 10, Average Loss: 22.4287, Average Regression Loss 4.4760, Average Classification Loss: 17.9527\n",
-      "[INFO] 2022-01-14 16:47:33,999 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 20, Average Loss: 16.8115, Average Regression Loss 3.1899, Average Classification Loss: 13.6216\n",
-      "[INFO] 2022-01-14 16:49:14,377 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 30, Average Loss: 14.7194, Average Regression Loss 2.7147, Average Classification Loss: 12.0047\n",
-      "[INFO] 2022-01-14 16:51:05,994 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 40, Average Loss: 13.0328, Average Regression Loss 2.3799, Average Classification Loss: 10.6529\n",
-      "[INFO] 2022-01-14 16:53:04,623 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 50, Average Loss: 11.7188, Average Regression Loss 2.1974, Average Classification Loss: 9.5214\n",
-      "[INFO] 2022-01-14 16:54:57,307 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 60, Average Loss: 10.6951, Average Regression Loss 1.9971, Average Classification Loss: 8.6981\n",
-      "[INFO] 2022-01-14 16:56:37,543 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 70, Average Loss: 9.8587, Average Regression Loss 1.9304, Average Classification Loss: 7.9283\n",
-      "[INFO] 2022-01-14 16:58:19,200 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 80, Average Loss: 9.1829, Average Regression Loss 1.9442, Average Classification Loss: 7.2387\n",
-      "[INFO] 2022-01-14 17:00:11,192 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 90, Average Loss: 8.6043, Average Regression Loss 1.9577, Average Classification Loss: 6.6466\n",
-      "[INFO] 2022-01-14 17:02:06,719 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 100, Average Loss: 8.0515, Average Regression Loss 1.8516, Average Classification Loss: 6.1998\n",
-      "[INFO] 2022-01-14 17:03:59,288 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 110, Average Loss: 7.7770, Average Regression Loss 1.8435, Average Classification Loss: 5.9335\n",
-      "[INFO] 2022-01-14 17:05:48,808 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 120, Average Loss: 7.3675, Average Regression Loss 1.5821, Average Classification Loss: 5.7854\n",
-      "[INFO] 2022-01-14 17:07:49,995 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 130, Average Loss: 7.1614, Average Regression Loss 1.8407, Average Classification Loss: 5.3207\n",
-      "[INFO] 2022-01-14 17:09:43,115 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 140, Average Loss: 6.7471, Average Regression Loss 1.6862, Average Classification Loss: 5.0609\n",
-      "[INFO] 2022-01-14 17:11:38,224 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 150, Average Loss: 6.5708, Average Regression Loss 1.5353, Average Classification Loss: 5.0354\n",
-      "[INFO] 2022-01-14 17:13:27,657 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 160, Average Loss: 6.5160, Average Regression Loss 1.6219, Average Classification Loss: 4.8941\n",
-      "[INFO] 2022-01-14 17:15:18,207 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 170, Average Loss: 6.3947, Average Regression Loss 1.5642, Average Classification Loss: 4.8304\n",
-      "[INFO] 2022-01-14 17:21:27,439 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Validation Loss: 5.8529, Validation Regression Loss 1.4493, Validation Classification Loss: 4.4037\n",
-      "[INFO] 2022-01-14 17:21:27,492 what.models.detection.ssd.mobilenet_v2_ssd_lite: Saved model models/mobilenet-v2-ssd-lite-Epoch-0-Loss-5.852912365635739.pth\n"
+      "[INFO] 2022-01-20 15:19:21,969 what.models.detection.ssd.mobilenet_v2_ssd_lite: Init from pretrained ssd models/mobilenet-v2-ssd-lite-mp-0_686.pth\n",
+      "[INFO] 2022-01-20 15:19:23,485 what.models.detection.ssd.mobilenet_v2_ssd_lite: Start training using CosineAnnealingLR scheduler.\n",
+      "/home/wuhanstudio/whitebox-adversarial-toolbox/what/models/detection/ssd/transforms/transforms.py:243: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "  mode = random.choice(self.sample_options)\n",
+      "[INFO] 2022-01-20 15:19:30,772 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 10, Average Loss: 22.4619, Average Regression Loss 4.4787, Average Classification Loss: 17.9832\n",
+      "[INFO] 2022-01-20 15:19:36,505 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 20, Average Loss: 16.7913, Average Regression Loss 3.0656, Average Classification Loss: 13.7256\n",
+      "[INFO] 2022-01-20 15:19:41,998 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 30, Average Loss: 14.7045, Average Regression Loss 2.6134, Average Classification Loss: 12.0911\n",
+      "[INFO] 2022-01-20 15:19:47,596 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 40, Average Loss: 13.2272, Average Regression Loss 2.4601, Average Classification Loss: 10.7672\n",
+      "[INFO] 2022-01-20 15:19:52,939 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 50, Average Loss: 11.8774, Average Regression Loss 2.2516, Average Classification Loss: 9.6258\n",
+      "[INFO] 2022-01-20 15:19:58,436 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 60, Average Loss: 10.7188, Average Regression Loss 2.0749, Average Classification Loss: 8.6439\n",
+      "[INFO] 2022-01-20 15:20:03,903 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 70, Average Loss: 9.7846, Average Regression Loss 1.9844, Average Classification Loss: 7.8002\n",
+      "[INFO] 2022-01-20 15:20:09,396 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 80, Average Loss: 9.1677, Average Regression Loss 1.9280, Average Classification Loss: 7.2397\n",
+      "[INFO] 2022-01-20 15:20:15,087 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 90, Average Loss: 8.3999, Average Regression Loss 1.8497, Average Classification Loss: 6.5502\n",
+      "[INFO] 2022-01-20 15:20:20,707 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 100, Average Loss: 8.1247, Average Regression Loss 1.8390, Average Classification Loss: 6.2858\n",
+      "[INFO] 2022-01-20 15:20:26,357 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 110, Average Loss: 7.5742, Average Regression Loss 1.7693, Average Classification Loss: 5.8050\n",
+      "[INFO] 2022-01-20 15:20:31,913 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 120, Average Loss: 7.2049, Average Regression Loss 1.6242, Average Classification Loss: 5.5806\n",
+      "[INFO] 2022-01-20 15:20:37,572 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 130, Average Loss: 7.0155, Average Regression Loss 1.6143, Average Classification Loss: 5.4012\n",
+      "[INFO] 2022-01-20 15:20:43,201 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 140, Average Loss: 6.7932, Average Regression Loss 1.6494, Average Classification Loss: 5.1437\n",
+      "[INFO] 2022-01-20 15:20:48,845 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 150, Average Loss: 6.6904, Average Regression Loss 1.6793, Average Classification Loss: 5.0111\n",
+      "[INFO] 2022-01-20 15:20:54,339 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 160, Average Loss: 6.3619, Average Regression Loss 1.5082, Average Classification Loss: 4.8537\n",
+      "[INFO] 2022-01-20 15:21:00,049 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 170, Average Loss: 6.4377, Average Regression Loss 1.6567, Average Classification Loss: 4.7809\n",
+      "[INFO] 2022-01-20 15:21:24,724 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Validation Loss: 5.8414, Validation Regression Loss 1.4633, Validation Classification Loss: 4.3781\n",
+      "[INFO] 2022-01-20 15:21:24,755 what.models.detection.ssd.mobilenet_v2_ssd_lite: Saved model models/mobilenet-v2-ssd-lite-Epoch-0-Loss-5.841379413121863.pth\n"
      ]
     }
    ],
@@ -305,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
