--- a/notebooks/mobilenet_v2_ssd_lite_train.ipynb
+++ b/notebooks/mobilenet_v2_ssd_lite_train.ipynb
@@ -260,7 +260,7 @@
    ],
    "source": [
     "# Create SSD network and load pretrained base net.\n",
-    "model = MobileNetV2SSDLite(is_test=False)\n",
+    "model = MobileNetV2SSDLite(is_test=False, class_names=train_dataset.classes)\n",
     "\n",
     "model.train(train_loader, val_loader, device=device, num_epochs=1, debug_steps=10, validation_epochs=1,\n",
     "           pretrained_ssd = pretrained_ssd, checkpoint_folder = checkpoint_folder)"
