[fix] mobilenet notebooks

--- a/notebooks/mobilenet_v2_ssd_lite_train.ipynb
+++ b/notebooks/mobilenet_v2_ssd_lite_train.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "from what.models.detection.ssd.ssd.preprocessing import TrainAugmentation, TestTransform\n",
-    "from what.models.detection.ssd.ssd import mobilenetv1_ssd_config\n",
+    "from what.models.detection.ssd.ssd import mobilenet_ssd_config\n",
     "from what.models.detection.ssd.ssd.ssd import MatchPrior"
    ]
   },
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# Load MobileNetSSD configuration\n",
-    "config              = mobilenetv1_ssd_config\n",
+    "config              = mobilenet_ssd_config\n",
     "train_transform     = TrainAugmentation(config.image_size, config.image_mean, config.image_std)\n",
     "target_transform    = MatchPrior(config.priors, config.center_variance, config.size_variance, 0.5)\n",
     "test_transform      = TestTransform(config.image_size, config.image_mean, config.image_std)"
@@ -98,7 +98,7 @@
      "text": [
       "Split 'train' already downloaded\n",
       "Loading 'voc-2012' split 'train'\n",
-      " 100% |███████████████| 5717/5717 [8.9s elapsed, 0s remaining, 558.8 samples/s]      \n",
+      " 100% |███████████████| 5717/5717 [8.9s elapsed, 0s remaining, 581.7 samples/s]      \n",
       "Dataset 'voc-2012-train' created\n"
      ]
     }
@@ -135,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-20 15:19:10,313 __main__: Train dataset size: 5717\n"
+      "[INFO] 2022-06-20 19:55:11,456 __main__: Train dataset size: 5717\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
      "text": [
       "Split 'train' already downloaded\n",
       "Loading 'voc-2007' split 'train'\n",
-      " 100% |███████████████| 2501/2501 [4.0s elapsed, 0s remaining, 601.4 samples/s]      \n",
+      " 100% |███████████████| 2501/2501 [4.0s elapsed, 0s remaining, 590.9 samples/s]      \n",
       "Dataset 'voc-2007-train' created\n"
      ]
     },
@@ -183,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-20 15:19:19,868 __main__: validation dataset size: 2501\n"
+      "[INFO] 2022-06-20 19:55:16,834 __main__: validation dataset size: 2501\n"
      ]
     }
    ],
@@ -232,29 +232,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-20 15:19:21,969 what.models.detection.ssd.mobilenet_v2_ssd_lite: Init from pretrained ssd models/mobilenet-v2-ssd-lite-mp-0_686.pth\n",
-      "[INFO] 2022-01-20 15:19:23,485 what.models.detection.ssd.mobilenet_v2_ssd_lite: Start training using CosineAnnealingLR scheduler.\n",
-      "/home/wuhanstudio/whitebox-adversarial-toolbox/what/models/detection/ssd/transforms/transforms.py:243: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "[INFO] 2022-06-20 19:55:16,996 what.models.detection.ssd.mobilenet_v2_ssd_lite: Init from pretrained ssd models/mobilenet-v2-ssd-lite-mp-0_686.pth\n",
+      "[INFO] 2022-06-20 19:55:18,670 what.models.detection.ssd.mobilenet_v2_ssd_lite: Start training using CosineAnnealingLR scheduler.\n",
+      "/home/wuhanstudio/Desktop/whitebox-adversarial-toolbox/what/models/detection/ssd/transforms/transforms.py:244: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  mode = random.choice(self.sample_options)\n",
-      "[INFO] 2022-01-20 15:19:30,772 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 10, Average Loss: 22.4619, Average Regression Loss 4.4787, Average Classification Loss: 17.9832\n",
-      "[INFO] 2022-01-20 15:19:36,505 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 20, Average Loss: 16.7913, Average Regression Loss 3.0656, Average Classification Loss: 13.7256\n",
-      "[INFO] 2022-01-20 15:19:41,998 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 30, Average Loss: 14.7045, Average Regression Loss 2.6134, Average Classification Loss: 12.0911\n",
-      "[INFO] 2022-01-20 15:19:47,596 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 40, Average Loss: 13.2272, Average Regression Loss 2.4601, Average Classification Loss: 10.7672\n",
-      "[INFO] 2022-01-20 15:19:52,939 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 50, Average Loss: 11.8774, Average Regression Loss 2.2516, Average Classification Loss: 9.6258\n",
-      "[INFO] 2022-01-20 15:19:58,436 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 60, Average Loss: 10.7188, Average Regression Loss 2.0749, Average Classification Loss: 8.6439\n",
-      "[INFO] 2022-01-20 15:20:03,903 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 70, Average Loss: 9.7846, Average Regression Loss 1.9844, Average Classification Loss: 7.8002\n",
-      "[INFO] 2022-01-20 15:20:09,396 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 80, Average Loss: 9.1677, Average Regression Loss 1.9280, Average Classification Loss: 7.2397\n",
-      "[INFO] 2022-01-20 15:20:15,087 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 90, Average Loss: 8.3999, Average Regression Loss 1.8497, Average Classification Loss: 6.5502\n",
-      "[INFO] 2022-01-20 15:20:20,707 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 100, Average Loss: 8.1247, Average Regression Loss 1.8390, Average Classification Loss: 6.2858\n",
-      "[INFO] 2022-01-20 15:20:26,357 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 110, Average Loss: 7.5742, Average Regression Loss 1.7693, Average Classification Loss: 5.8050\n",
-      "[INFO] 2022-01-20 15:20:31,913 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 120, Average Loss: 7.2049, Average Regression Loss 1.6242, Average Classification Loss: 5.5806\n",
-      "[INFO] 2022-01-20 15:20:37,572 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 130, Average Loss: 7.0155, Average Regression Loss 1.6143, Average Classification Loss: 5.4012\n",
-      "[INFO] 2022-01-20 15:20:43,201 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 140, Average Loss: 6.7932, Average Regression Loss 1.6494, Average Classification Loss: 5.1437\n",
-      "[INFO] 2022-01-20 15:20:48,845 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 150, Average Loss: 6.6904, Average Regression Loss 1.6793, Average Classification Loss: 5.0111\n",
-      "[INFO] 2022-01-20 15:20:54,339 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 160, Average Loss: 6.3619, Average Regression Loss 1.5082, Average Classification Loss: 4.8537\n",
-      "[INFO] 2022-01-20 15:21:00,049 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 170, Average Loss: 6.4377, Average Regression Loss 1.6567, Average Classification Loss: 4.7809\n",
-      "[INFO] 2022-01-20 15:21:24,724 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Validation Loss: 5.8414, Validation Regression Loss 1.4633, Validation Classification Loss: 4.3781\n",
-      "[INFO] 2022-01-20 15:21:24,755 what.models.detection.ssd.mobilenet_v2_ssd_lite: Saved model models/mobilenet-v2-ssd-lite-Epoch-0-Loss-5.841379413121863.pth\n"
+      "[INFO] 2022-06-20 19:55:23,569 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 10, Average Loss: 22.4182, Average Regression Loss 4.2713, Average Classification Loss: 18.1469\n",
+      "[INFO] 2022-06-20 19:55:27,751 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 20, Average Loss: 16.7822, Average Regression Loss 3.0081, Average Classification Loss: 13.7741\n",
+      "[INFO] 2022-06-20 19:55:32,151 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 30, Average Loss: 14.7486, Average Regression Loss 2.6210, Average Classification Loss: 12.1276\n",
+      "[INFO] 2022-06-20 19:55:36,486 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 40, Average Loss: 13.1190, Average Regression Loss 2.2678, Average Classification Loss: 10.8512\n",
+      "[INFO] 2022-06-20 19:55:40,744 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 50, Average Loss: 11.8597, Average Regression Loss 2.2432, Average Classification Loss: 9.6164\n",
+      "[INFO] 2022-06-20 19:55:45,089 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 60, Average Loss: 10.8348, Average Regression Loss 2.0559, Average Classification Loss: 8.7789\n",
+      "[INFO] 2022-06-20 19:55:49,434 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 70, Average Loss: 9.8359, Average Regression Loss 1.9142, Average Classification Loss: 7.9217\n",
+      "[INFO] 2022-06-20 19:55:53,594 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 80, Average Loss: 9.1001, Average Regression Loss 1.8031, Average Classification Loss: 7.2970\n",
+      "[INFO] 2022-06-20 19:55:57,849 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 90, Average Loss: 8.6603, Average Regression Loss 1.8471, Average Classification Loss: 6.8133\n",
+      "[INFO] 2022-06-20 19:56:02,185 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 100, Average Loss: 8.0113, Average Regression Loss 1.7620, Average Classification Loss: 6.2494\n",
+      "[INFO] 2022-06-20 19:56:06,476 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 110, Average Loss: 7.4521, Average Regression Loss 1.6346, Average Classification Loss: 5.8175\n",
+      "[INFO] 2022-06-20 19:56:10,739 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 120, Average Loss: 7.1718, Average Regression Loss 1.6793, Average Classification Loss: 5.4925\n",
+      "[INFO] 2022-06-20 19:56:15,227 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 130, Average Loss: 7.1433, Average Regression Loss 1.6950, Average Classification Loss: 5.4483\n",
+      "[INFO] 2022-06-20 19:56:19,491 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 140, Average Loss: 6.8724, Average Regression Loss 1.7079, Average Classification Loss: 5.1645\n",
+      "[INFO] 2022-06-20 19:56:23,779 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 150, Average Loss: 6.4853, Average Regression Loss 1.5481, Average Classification Loss: 4.9372\n",
+      "[INFO] 2022-06-20 19:56:28,062 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 160, Average Loss: 6.4509, Average Regression Loss 1.5880, Average Classification Loss: 4.8629\n",
+      "[INFO] 2022-06-20 19:56:32,462 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Step: 170, Average Loss: 6.5300, Average Regression Loss 1.6951, Average Classification Loss: 4.8348\n",
+      "[INFO] 2022-06-20 19:56:50,237 what.models.detection.ssd.mobilenet_v2_ssd_lite: Epoch: 0, Validation Loss: 5.8372, Validation Regression Loss 1.4384, Validation Classification Loss: 4.3989\n",
+      "[INFO] 2022-06-20 19:56:50,284 what.models.detection.ssd.mobilenet_v2_ssd_lite: Saved model models/mobilenet-v2-ssd-lite-Epoch-0-Loss-5.837247184560269.pth\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
