--- a/notebooks/mobilenet_v1_ssd_train.ipynb
+++ b/notebooks/mobilenet_v1_ssd_train.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "from what.models.detection.ssd.ssd.preprocessing import TrainAugmentation, TestTransform\n",
-    "from what.models.detection.ssd.ssd import mobilenetv1_ssd_config\n",
+    "from what.models.detection.ssd.ssd import mobilenet_ssd_config\n",
     "from what.models.detection.ssd.ssd.ssd import MatchPrior"
    ]
   },
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# Load MobileNetSSD configuration\n",
-    "config              = mobilenetv1_ssd_config\n",
+    "config              = mobilenet_ssd_config\n",
     "train_transform     = TrainAugmentation(config.image_size, config.image_mean, config.image_std)\n",
     "target_transform    = MatchPrior(config.priors, config.center_variance, config.size_variance, 0.5)\n",
     "test_transform      = TestTransform(config.image_size, config.image_mean, config.image_std)"
@@ -98,7 +98,9 @@
      "text": [
       "Split 'train' already downloaded\n",
       "Ignoring unsupported parameter 'label_types' for importer type <class 'fiftyone.utils.data.importers.FiftyOneImageDetectionDatasetImporter'>\n",
-      "Loading existing dataset 'voc-2012-train'. To reload from disk, either delete the existing dataset or provide a custom `dataset_name` to use\n"
+      "Loading 'voc-2012' split 'train'\n",
+      " 100% |███████████████| 5717/5717 [8.7s elapsed, 0s remaining, 593.3 samples/s]      \n",
+      "Dataset 'voc-2012-train' created\n"
      ]
     }
    ],
@@ -134,7 +136,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-20 15:15:28,574 __main__: Train dataset size: 5717\n"
+      "[INFO] 2022-06-20 19:49:08,170 __main__: Train dataset size: 5717\n"
      ]
     }
    ],
@@ -173,14 +175,16 @@
      "output_type": "stream",
      "text": [
       "Split 'train' already downloaded\n",
-      "Loading existing dataset 'voc-2007-train'. To reload from disk, either delete the existing dataset or provide a custom `dataset_name` to use\n"
+      "Loading 'voc-2007' split 'train'\n",
+      " 100% |███████████████| 2501/2501 [4.0s elapsed, 0s remaining, 598.9 samples/s]      \n",
+      "Dataset 'voc-2007-train' created\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-20 15:15:30,608 __main__: validation dataset size: 2501\n"
+      "[INFO] 2022-06-20 19:49:14,865 __main__: validation dataset size: 2501\n"
      ]
     }
    ],
@@ -229,29 +233,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] 2022-01-20 15:15:32,661 what.models.detection.ssd.mobilenet_v1_ssd: Init from pretrained ssd models/mobilenet-v1-ssd-mp-0_675.pth\n",
-      "[INFO] 2022-01-20 15:15:34,147 what.models.detection.ssd.mobilenet_v1_ssd: Start training using CosineAnnealingLR scheduler.\n",
-      "/home/wuhanstudio/whitebox-adversarial-toolbox/what/models/detection/ssd/transforms/transforms.py:243: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+      "[INFO] 2022-06-20 19:49:15,926 what.models.detection.ssd.mobilenet_v1_ssd: Init from pretrained ssd models/mobilenet-v1-ssd-mp-0_675.pth\n",
+      "[INFO] 2022-06-20 19:49:17,665 what.models.detection.ssd.mobilenet_v1_ssd: Start training using CosineAnnealingLR scheduler.\n",
+      "/home/wuhanstudio/Desktop/whitebox-adversarial-toolbox/what/models/detection/ssd/transforms/transforms.py:244: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
       "  mode = random.choice(self.sample_options)\n",
-      "[INFO] 2022-01-20 15:15:41,215 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 10, Average Loss: 19.7620, Average Regression Loss 3.9450, Average Classification Loss: 15.8170\n",
-      "[INFO] 2022-01-20 15:15:46,461 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 20, Average Loss: 14.0563, Average Regression Loss 2.9937, Average Classification Loss: 11.0626\n",
-      "[INFO] 2022-01-20 15:15:51,890 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 30, Average Loss: 11.6577, Average Regression Loss 2.9390, Average Classification Loss: 8.7187\n",
-      "[INFO] 2022-01-20 15:15:57,324 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 40, Average Loss: 9.7512, Average Regression Loss 2.7660, Average Classification Loss: 6.9852\n",
-      "[INFO] 2022-01-20 15:16:02,809 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 50, Average Loss: 8.6162, Average Regression Loss 2.6561, Average Classification Loss: 5.9601\n",
-      "[INFO] 2022-01-20 15:16:08,262 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 60, Average Loss: 7.9420, Average Regression Loss 2.4775, Average Classification Loss: 5.4645\n",
-      "[INFO] 2022-01-20 15:16:13,942 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 70, Average Loss: 7.8411, Average Regression Loss 2.6946, Average Classification Loss: 5.1465\n",
-      "[INFO] 2022-01-20 15:16:19,312 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 80, Average Loss: 7.2090, Average Regression Loss 2.2292, Average Classification Loss: 4.9799\n",
-      "[INFO] 2022-01-20 15:16:24,890 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 90, Average Loss: 7.0581, Average Regression Loss 2.2933, Average Classification Loss: 4.7648\n",
-      "[INFO] 2022-01-20 15:16:30,210 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 100, Average Loss: 6.8130, Average Regression Loss 2.1301, Average Classification Loss: 4.6828\n",
-      "[INFO] 2022-01-20 15:16:35,586 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 110, Average Loss: 6.5294, Average Regression Loss 2.0344, Average Classification Loss: 4.4950\n",
-      "[INFO] 2022-01-20 15:16:41,162 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 120, Average Loss: 6.5411, Average Regression Loss 1.9626, Average Classification Loss: 4.5785\n",
-      "[INFO] 2022-01-20 15:16:46,779 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 130, Average Loss: 6.2685, Average Regression Loss 1.8621, Average Classification Loss: 4.4064\n",
-      "[INFO] 2022-01-20 15:16:52,010 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 140, Average Loss: 6.3041, Average Regression Loss 1.9504, Average Classification Loss: 4.3536\n",
-      "[INFO] 2022-01-20 15:16:57,610 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 150, Average Loss: 6.1556, Average Regression Loss 1.7948, Average Classification Loss: 4.3608\n",
-      "[INFO] 2022-01-20 15:17:03,056 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 160, Average Loss: 6.2693, Average Regression Loss 1.9008, Average Classification Loss: 4.3685\n",
-      "[INFO] 2022-01-20 15:17:08,486 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 170, Average Loss: 6.2064, Average Regression Loss 1.8248, Average Classification Loss: 4.3815\n",
-      "[INFO] 2022-01-20 15:17:32,680 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Validation Loss: 5.7942, Validation Regression Loss 1.6806, Validation Classification Loss: 4.1136\n",
-      "[INFO] 2022-01-20 15:17:32,732 what.models.detection.ssd.mobilenet_v1_ssd: Saved model models/mobilenet-v1-ssd-Epoch-0-Loss-5.794220924377441.pth\n"
+      "[INFO] 2022-06-20 19:49:22,445 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 10, Average Loss: 19.9127, Average Regression Loss 3.9046, Average Classification Loss: 16.0081\n",
+      "[INFO] 2022-06-20 19:49:27,812 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 20, Average Loss: 14.3018, Average Regression Loss 3.1249, Average Classification Loss: 11.1768\n",
+      "[INFO] 2022-06-20 19:49:33,418 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 30, Average Loss: 11.8820, Average Regression Loss 2.9619, Average Classification Loss: 8.9200\n",
+      "[INFO] 2022-06-20 19:49:38,549 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 40, Average Loss: 9.9824, Average Regression Loss 2.8017, Average Classification Loss: 7.1807\n",
+      "[INFO] 2022-06-20 19:49:42,978 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 50, Average Loss: 8.7460, Average Regression Loss 2.7396, Average Classification Loss: 6.0063\n",
+      "[INFO] 2022-06-20 19:49:47,315 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 60, Average Loss: 8.0351, Average Regression Loss 2.5530, Average Classification Loss: 5.4821\n",
+      "[INFO] 2022-06-20 19:49:51,674 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 70, Average Loss: 7.7288, Average Regression Loss 2.5824, Average Classification Loss: 5.1464\n",
+      "[INFO] 2022-06-20 19:49:55,818 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 80, Average Loss: 7.2863, Average Regression Loss 2.3822, Average Classification Loss: 4.9041\n",
+      "[INFO] 2022-06-20 19:50:00,010 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 90, Average Loss: 7.1326, Average Regression Loss 2.3058, Average Classification Loss: 4.8268\n",
+      "[INFO] 2022-06-20 19:50:03,969 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 100, Average Loss: 6.8541, Average Regression Loss 2.1343, Average Classification Loss: 4.7198\n",
+      "[INFO] 2022-06-20 19:50:07,989 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 110, Average Loss: 7.0033, Average Regression Loss 2.2582, Average Classification Loss: 4.7451\n",
+      "[INFO] 2022-06-20 19:50:12,211 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 120, Average Loss: 6.5534, Average Regression Loss 2.0581, Average Classification Loss: 4.4953\n",
+      "[INFO] 2022-06-20 19:50:16,246 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 130, Average Loss: 6.5756, Average Regression Loss 2.0634, Average Classification Loss: 4.5122\n",
+      "[INFO] 2022-06-20 19:50:20,349 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 140, Average Loss: 6.2191, Average Regression Loss 1.8120, Average Classification Loss: 4.4071\n",
+      "[INFO] 2022-06-20 19:50:24,262 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 150, Average Loss: 6.2722, Average Regression Loss 1.8724, Average Classification Loss: 4.3998\n",
+      "[INFO] 2022-06-20 19:50:28,194 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 160, Average Loss: 6.1515, Average Regression Loss 1.7751, Average Classification Loss: 4.3764\n",
+      "[INFO] 2022-06-20 19:50:32,445 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Step: 170, Average Loss: 6.2035, Average Regression Loss 1.9293, Average Classification Loss: 4.2742\n",
+      "[INFO] 2022-06-20 19:50:51,573 what.models.detection.ssd.mobilenet_v1_ssd: Epoch: 0, Validation Loss: 5.8391, Validation Regression Loss 1.7125, Validation Classification Loss: 4.1266\n",
+      "[INFO] 2022-06-20 19:50:51,620 what.models.detection.ssd.mobilenet_v1_ssd: Saved model models/mobilenet-v1-ssd-Epoch-0-Loss-5.839100397085842.pth\n"
      ]
     }
    ],
@@ -273,7 +277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -287,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
